--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block nav %}
+    <li class="nav-item">
+        <a class="nav-link active" href="{% url 'dashboard' %}">
+            <i class="fe fe-home"></i> Dashboards
+        </a>
+    </li>
+{% endblock %}
 {% block content %}
 {% endblock %}
